Checking in the 2006 annual report -- its not linked form the main page yet. Also fixed a problem with a wrong background color in the logo bar.

--- a/htdocs/css/framework.css
+++ b/htdocs/css/framework.css
@@ -2,7 +2,7 @@
 
 .LogoBarCell
 {
-	background: #736DAB url(/images/header_BG.gif) bottom left repeat-x;
+	background: #534ad3 url(/images/header_BG.gif) bottom left repeat-x;
 	position: relative;
 }
 
